--- a/GnnOutputDataset.ipynb
+++ b/GnnOutputDataset.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "6e12437b",
    "metadata": {},
    "outputs": [
     {
@@ -65,6 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
+   "id": "04e5c636",
    "metadata": {},
    "outputs": [
     {
@@ -1348,6 +1350,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
+   "id": "fb7ff795",
    "metadata": {},
    "outputs": [
     {
@@ -3944,6 +3947,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
+   "id": "c505fb77",
    "metadata": {},
    "outputs": [
     {
@@ -3978,6 +3982,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4712096e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3985,6 +3990,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
+   "id": "a68a3d07",
    "metadata": {
     "scrolled": true
    },
@@ -4071,6 +4077,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
+   "id": "ecb22f2b",
    "metadata": {},
    "outputs": [
     {
@@ -4096,6 +4103,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
+   "id": "480b83ae",
    "metadata": {},
    "outputs": [
     {
@@ -4141,6 +4149,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
+   "id": "4a8122fc",
    "metadata": {},
    "outputs": [
     {
@@ -4173,6 +4182,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
+   "id": "e584e50a",
    "metadata": {},
    "outputs": [
     {
@@ -5193,6 +5203,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "3699a127",
    "metadata": {
     "scrolled": true
    },
@@ -5225,6 +5236,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
+   "id": "be8f7595",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5242,6 +5254,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
+   "id": "29a83832",
    "metadata": {},
    "outputs": [
     {
@@ -5261,6 +5274,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
+   "id": "2e57abec",
    "metadata": {},
    "outputs": [
     {
@@ -5306,6 +5320,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
+   "id": "2199e903",
    "metadata": {},
    "outputs": [
     {
@@ -6542,6 +6557,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
+   "id": "52620551",
    "metadata": {},
    "outputs": [
     {
@@ -7776,6 +7792,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
+   "id": "408873d6",
    "metadata": {},
    "outputs": [
     {
@@ -7818,6 +7835,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
+   "id": "7903677f",
    "metadata": {
     "scrolled": true
    },
@@ -9059,6 +9077,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
+   "id": "91fad3c8",
    "metadata": {},
    "outputs": [
     {
@@ -9080,6 +9099,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
+   "id": "376b1c4a",
    "metadata": {
     "scrolled": false
    },
@@ -9140,6 +9160,7 @@
   },
   {
    "cell_type": "raw",
+   "id": "2f0f6cd6",
    "metadata": {},
    "source": [
     "print(truelabels[lists[0]])"
@@ -9148,6 +9169,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
+   "id": "40c584c4",
    "metadata": {
     "scrolled": true
    },
@@ -9157,10 +9179,10 @@
      "evalue": "list indices must be integers or slices, not Series",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_19840/4072616641.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscatter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mlists\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mlists\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtruelabels\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not Series"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m~\\AppData\\Local\\Temp/ipykernel_19840/4072616641.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[0mplt\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mfigure\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mfigsize\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;36m10\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;36m10\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 2\u001B[1;33m \u001B[0mplt\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mscatter\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mX\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mlists\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mX\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mlists\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mc\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mtruelabels\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mdf\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      3\u001B[0m \u001B[0mplt\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mshow\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mTypeError\u001B[0m: list indices must be integers or slices, not Series"
      ]
     },
     {
@@ -9182,7 +9204,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -9196,7 +9218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
