--- a/CNNmainline.ipynb
+++ b/CNNmainline.ipynb
@@ -3204,6 +3204,188 @@
     "    test_accuracy = 100 * correct / total\n",
     "    print(f\"Test Accuracy: {test_accuracy:.2f}%\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import mediapipe as mp\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "\n",
+    "mp_drawing = mp.solutions.drawing_utils\n",
+    "mp_face_mesh = mp.solutions.face_mesh\n",
+    "\n",
+    "# Load the MediaPipe face mesh model\n",
+    "face_mesh = mp_face_mesh.FaceMesh(static_image_mode=False, max_num_faces=1)\n",
+    "\n",
+    "# Define the CNN architecture with attention mechanism\n",
+    "class AttentionCNN(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(AttentionCNN, self).__init__()\n",
+    "        self.conv1 = nn.Conv2d(1, 32, kernel_size=3, stride=1)\n",
+    "        self.conv2 = nn.Conv2d(32, 64, kernel_size=3, stride=1)\n",
+    "        self.conv3 = nn.Conv2d(64, 128, kernel_size=3, stride=1)\n",
+    "        self.fc1 = nn.Linear(128 * 4 * 4, 64)\n",
+    "        self.attention = nn.Linear(64, 1)\n",
+    "        self.fc2 = nn.Linear(64, 2)  # assuming 2 output classes\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = nn.functional.relu(self.conv1(x))\n",
+    "        x = nn.functional.max_pool2d(x, 2)\n",
+    "        x = nn.functional.relu(self.conv2(x))\n",
+    "        x = nn.functional.max_pool2d(x, 2)\n",
+    "        x = nn.functional.relu(self.conv3(x))\n",
+    "        x = nn.functional.max_pool2d(x, 2)\n",
+    "        x = x.view(x.size(0), -1)\n",
+    "        x = nn.functional.relu(self.fc1(x))\n",
+    "\n",
+    "        # Apply attention mechanism\n",
+    "        attention_weights = nn.functional.softmax(self.attention(x), dim=1)\n",
+    "        x = x * attention_weights\n",
+    "\n",
+    "        x = self.fc2(x)\n",
+    "        return x\n",
+    "\n",
+    "# Function to extract facial landmarks using MediaPipe\n",
+    "def extract_facial_landmarks(image):\n",
+    "    with mp_face_mesh.FaceMesh(\n",
+    "        static_image_mode=True,\n",
+    "        max_num_faces=1,\n",
+    "        min_detection_confidence=0.5) as face_mesh:\n",
+    "\n",
+    "        # Convert the image to RGB\n",
+    "        image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "        # Process the image and get the face landmarks\n",
+    "        results = face_mesh.process(image)\n",
+    "\n",
+    "        if results.multi_face_landmarks is None:\n",
+    "            return None\n",
+    "\n",
+    "        landmarks = []\n",
+    "        for landmark in results.multi_face_landmarks[0].landmark:\n",
+    "            landmarks.append((landmark.x, landmark.y))\n",
+    "\n",
+    "    return np.array(landmarks)\n",
+    "\n",
+    "# Define a custom dataset\n",
+    "class FaceDataset(Dataset):\n",
+    "    def __init__(self, images, labels):\n",
+    "        self.images = images\n",
+    "        self.labels = labels\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.images)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        image = self.images[idx]\n",
+    "        landmarks = extract_facial_landmarks(image)\n",
+    "        if landmarks is not None:\n",
+    "            image, landmarks = preprocess(image, landmarks)\n",
+    "            label = self.labels[idx]\n",
+    "            return image, landmarks, label\n",
+    "        else:\n",
+    "            return None\n",
+    "\n",
+    "# Function to preprocess image and landmarks\n",
+    "def preprocess(image, landmarks):\n",
+    "    # Resize and convert image to grayscale\n",
+    "    image = cv2.resize(image, (64, 64))\n",
+    "    image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "    image = np.expand_dims(image, axis=0)\n",
+    "\n",
+    "    # Normalize landmarks to [-1, 1]\n",
+    "    landmarks = (landmarks - image.shape[1] / 2) / (image.shape[1] / 2)\n",
+    "\n",
+    "    return image, landmarks\n",
+    "\n",
+    "# Load and preprocess the dataset\n",
+    "# Assuming your dataset is stored in 'images' and 'labels' lists\n",
+    "dataset = FaceDataset(images, labels)\n",
+    "\n",
+    "# Split the dataset into train, validation, and test sets\n",
+    "train_size = int(0.8 * len(dataset))\n",
+    "val_size = int(0.1 * len(dataset))\n",
+    "test_size = len(dataset) - train_size - val_size\n",
+    "train_set, val_set, test_set = torch.utils.data.random_split(dataset, [train_size, val_size, test_size])\n",
+    "\n",
+    "# Create data loaders\n",
+    "batch_size = 16\n",
+    "train_loader = DataLoader(train_set, batch_size=batch_size, shuffle=True)\n",
+    "val_loader = DataLoader(val_set, batch_size=batch_size, shuffle=False)\n",
+    "test_loader = DataLoader(test_set, batch_size=batch_size, shuffle=False)\n",
+    "\n",
+    "# Initialize the model and optimizer\n",
+    "model = AttentionCNN()\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "\n",
+    "# Train the model\n",
+    "num_epochs = 10\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model.to(device)\n",
+    "for epoch in range(num_epochs):\n",
+    "    model.train()\n",
+    "    for batch_images, batch_landmarks, batch_labels in train_loader:\n",
+    "        batch_images = batch_images.to(device)\n",
+    "        batch_landmarks = batch_landmarks.to(device)\n",
+    "        batch_labels = batch_labels.to(device)\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        # Forward pass\n",
+    "        outputs = model(batch_images)\n",
+    "        loss = criterion(outputs, batch_labels)\n",
+    "\n",
+    "        # Backward pass and optimization\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "    # Evaluate on the validation set\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        correct = 0\n",
+    "        total = 0\n",
+    "        for batch_images, batch_landmarks, batch_labels in val_loader:\n",
+    "            batch_images = batch_images.to(device)\n",
+    "            batch_landmarks = batch_landmarks.to(device)\n",
+    "            batch_labels = batch_labels.to(device)\n",
+    "\n",
+    "            outputs = model(batch_images)\n",
+    "            _, predicted = torch.max(outputs.data, 1)\n",
+    "            total += batch_labels.size(0)\n",
+    "            correct += (predicted == batch_labels).sum().item()\n",
+    "\n",
+    "        val_accuracy = 100 * correct / total\n",
+    "        print(f\"Epoch [{epoch+1}/{num_epochs}], Validation Accuracy: {val_accuracy:.2f}%\")\n",
+    "\n",
+    "# Test the model\n",
+    "model.eval()\n",
+    "with torch.no_grad():\n",
+    "    correct = 0\n",
+    "    total = 0\n",
+    "    for batch_images, batch_landmarks, batch_labels in test_loader:\n",
+    "        batch_images = batch_images.to(device)\n",
+    "        batch_landmarks = batch_landmarks.to(device)\n",
+    "        batch_labels = batch_labels.to(device)\n",
+    "\n",
+    "        outputs = model(batch_images)\n",
+    "        _, predicted = torch.max(outputs.data, 1)\n",
+    "        total += batch_labels.size(0)\n",
+    "        correct += (predicted == batch_labels).sum().item()\n",
+    "\n",
+    "    test_accuracy = 100 * correct / total\n",
+    "    print(f\"Test Accuracy: {test_accuracy:.2f}%\")\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
