--- a/CNNmainline.ipynb
+++ b/CNNmainline.ipynb
@@ -3386,6 +3386,149 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"  # Specify which GPU to use, e.g., \"0\" for GPU 0\n",
+    "\n",
+    "import cv2\n",
+    "import mediapipe as mp\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "from tensorflow.keras import layers\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.utils import to_categorical\n",
+    "\n",
+    "mp_drawing = mp.solutions.drawing_utils\n",
+    "mp_face_mesh = mp.solutions.face_mesh\n",
+    "\n",
+    "# Load the MediaPipe face mesh model\n",
+    "face_mesh = mp_face_mesh.FaceMesh(static_image_mode=False, max_num_faces=1)\n",
+    "\n",
+    "# Enable GPU growth to allocate memory on demand\n",
+    "gpus = tf.config.experimental.list_physical_devices(\"GPU\")\n",
+    "if gpus:\n",
+    "    try:\n",
+    "        for gpu in gpus:\n",
+    "            tf.config.experimental.set_memory_growth(gpu, True)\n",
+    "    except RuntimeError as e:\n",
+    "        print(e)\n",
+    "\n",
+    "# Define the CNN architecture with attention mechanism\n",
+    "class AttentionCNN(tf.keras.Model):\n",
+    "    def __init__(self):\n",
+    "        super(AttentionCNN, self).__init__()\n",
+    "        self.conv1 = layers.Conv2D(32, kernel_size=3, strides=1)\n",
+    "        self.conv2 = layers.Conv2D(64, kernel_size=3, strides=1)\n",
+    "        self.conv3 = layers.Conv2D(128, kernel_size=3, strides=1)\n",
+    "        self.flatten = layers.Flatten()\n",
+    "        self.fc1 = layers.Dense(64)\n",
+    "        self.attention = layers.Dense(1)\n",
+    "        self.fc2 = layers.Dense(7)  # assuming 7 output classes\n",
+    "\n",
+    "    def call(self, x):\n",
+    "        x = tf.nn.relu(self.conv1(x))\n",
+    "        x = tf.nn.max_pool2d(x, ksize=2, strides=2)\n",
+    "        x = tf.nn.relu(self.conv2(x))\n",
+    "        x = tf.nn.max_pool2d(x, ksize=2, strides=2)\n",
+    "        x = tf.nn.relu(self.conv3(x))\n",
+    "        x = tf.nn.max_pool2d(x, ksize=2, strides=2)\n",
+    "        x = self.flatten(x)\n",
+    "        x = tf.nn.relu(self.fc1(x))\n",
+    "\n",
+    "        # Apply attention mechanism\n",
+    "        attention_weights = tf.nn.softmax(self.attention(x), axis=0)\n",
+    "        x = tf.multiply(x, attention_weights)\n",
+    "\n",
+    "        x = self.fc2(x)\n",
+    "        return x\n",
+    "\n",
+    "# Create the model instance\n",
+    "model = AttentionCNN()\n",
+    "\n",
+    "# Define the loss function and optimizer\n",
+    "loss_fn = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
+    "optimizer = Adam(learning_rate=0.001)\n",
+    "\n",
+    "# Define a custom training loop\n",
+    "@tf.function\n",
+    "def train_step(inputs, labels):\n",
+    "    with tf.GradientTape() as tape:\n",
+    "        logits = model(inputs, training=True)\n",
+    "        loss_value = loss_fn(labels, logits)\n",
+    "\n",
+    "    grads = tape.gradient(loss_value, model.trainable_variables)\n",
+    "    optimizer.apply_gradients(zip(grads, model.trainable_variables))\n",
+    "\n",
+    "    return loss_value\n",
+    "\n",
+    "# Create a custom dataset class\n",
+    "class CustomDataset(tf.keras.utils.Sequence):\n",
+    "    def __init__(self, images, labels, batch_size):\n",
+    "        self.images = images\n",
+    "        self.labels = labels\n",
+    "        self.batch_size = batch_size\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return int(np.ceil(len(self.images) / self.batch_size))\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        batch_images = self.images[idx * self.batch_size : (idx + 1) * self.batch_size]\n",
+    "        batch_labels = self.labels[idx * self.batch_size : (idx + 1) * self.batch_size]\n",
+    "\n",
+    "        return np.array(batch_images), np.array(batch_labels)\n",
+    "\n",
+    "\n",
+    "# Normalize and reshape the images\n",
+    "image = cv2.resize(image, (150,150)) / 255.0\n",
+    "images = np.expand_dims(images, axis=-1)\n",
+    "\n",
+    "# Convert labels to categorical format\n",
+    "labels = np.array(labels)\n",
+    "labels = to_categorical(labels)\n",
+    "\n",
+    "# Split the data into training and validation sets\n",
+    "split = int(0.8 * len(images))\n",
+    "train_images, val_images = images[:split], images[split:]\n",
+    "train_labels, val_labels = labels[:split], labels[split:]\n",
+    "\n",
+    "# Create the custom datasets\n",
+    "batch_size = 32\n",
+    "train_dataset = CustomDataset(train_images, train_labels, batch_size)\n",
+    "val_dataset = CustomDataset(val_images, val_labels, batch_size)\n",
+    "\n",
+    "# Training loop\n",
+    "epochs = 10\n",
+    "for epoch in range(epochs):\n",
+    "    print(f\"Epoch {epoch+1}/{epochs}\")\n",
+    "    for i, (inputs, labels) in enumerate(train_dataset):\n",
+    "        loss = train_step(inputs, labels)\n",
+    "        print(f\"Batch {i+1}/{len(train_dataset)} - Loss: {loss:.4f}\")\n",
+    "\n",
+    "    # Validation\n",
+    "    val_loss = 0.0\n",
+    "    val_accuracy = 0.0\n",
+    "    num_batches = 0\n",
+    "\n",
+    "    for inputs, labels in val_dataset:\n",
+    "        logits = model(inputs, training=False)\n",
+    "        val_loss += loss_fn(labels, logits)\n",
+    "        val_accuracy += tf.reduce_sum(tf.equal(tf.argmax(labels, axis=1), tf.argmax(logits, axis=1)))\n",
+    "        num_batches += 1\n",
+    "\n",
+    "    val_loss /= num_batches\n",
+    "    val_accuracy /= len(val_images)\n",
+    "\n",
+    "    print(f\"Val Loss: {val_loss:.4f} - Val Accuracy: {val_accuracy:.4f}\")\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
